--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="AETHER IIIT Lucknow - The official technical club of IIIT Lucknow. Join us for cutting-edge tech events, hackathons, and competitions." />
+    content="AETHER IIIT Lucknow - The official AI/ML & Data Science club of IIIT Lucknow. Join us for cutting-edge tech events, hackathons, and competitions." />
   <meta name="keywords"
     content="symposium, tech fest, hackathon, coding, engineering, college fest, AETHER, IIIT Lucknow" />
   <meta name="theme-color" content="#0a0a0f" />
